# pbipandas

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  test-version.yml  version-bump.yml
pbi/: client.py
pbipandas/: __init__.py  client.py
pbipandas/auth/: base_client.py
pbipandas/bulks/: bulk_client.py  bulk_client_new.py
pbipandas/dataflow/: dataflow_client.py
pbipandas/dataset/: dataset_client.py
pbipandas/gateway/: __init__.py  gateway_client.py
pbipandas/report/: report_client.py
pbipandas/utils/: info_utils.py
pbipandas/workspace/: workspace_client.py
