[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbipandas"
version = "1.0.4"
description = "A Python wrapper for Power BI REST API with Pandas integration"
readme = "README.md"
authors =  [{ name = "Harry Dinh", email = "hoangdinh.2710@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pandas"
]

[project.urls]
Homepage = "https://github.com/hoangdinh2710/pbipandas"
Repository = "https://github.com/hoangdinh2710/pbipandas"
Issues = "https://github.com/hoangdinh2710/pbipandas/issues"

[tool.bumpversion]
current_version = "1.0.4"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'current_version = "{current_version}"'
replace = 'current_version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pbipandas/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'